Bug 502149 - Ugly action names can be shown to the user when notification is in history pop-up
Summary: Ugly action names can be shown to the user when notification is in history po...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Notifications (other bugs)
Version First Reported In: 6.3.2
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2025-03-29 05:08 UTC by Nate Graham
Modified: 2025-08-15 10:24 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Notification from Element (311.92 KB, image/png)
2025-03-29 05:09 UTC, Nate Graham
Details
Notification from Telegram (249.23 KB, image/png)
2025-03-29 05:10 UTC, Nate Graham
Details
Telegram notification on 6.3.3 w/ manual patch (14.71 KB, image/png)
2025-03-29 07:36 UTC, Naxdy
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2025-03-29 05:08:28 UTC
STEPS TO REPRODUCE
1. Receive a message on Telegram or Element
2. Let the notification time out
3. Open history pop-up


OBSERVED RESULT
Buttons with weird, ugly, inappropriate names. See attached screenshots.


EXPECTED RESULT
Not that, I guess? The button should have a sane, user-comprehensible name. If this is impossible because the action name is a technical thing not intended to be shown to the user, then come up with a different label for the button.
Comment 1 Nate Graham 2025-03-29 05:09:54 UTC
Created attachment 179835 [details]
Notification from Element
Comment 2 Nate Graham 2025-03-29 05:10:10 UTC
Created attachment 179836 [details]
Notification from Telegram
Comment 3 Bug Janitor Service 2025-03-29 06:58:18 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5353
Comment 4 Naxdy 2025-03-29 07:35:41 UTC
That's interesting, Telegram looks very different for me (6.3.3 with my patch manually applied). Makes me wonder if there's something that landed in master that changed something wrt how actions are displayed?

Gonna compile from master and have a look at what's going on
Comment 5 Naxdy 2025-03-29 07:36:12 UTC
Created attachment 179837 [details]
Telegram notification on 6.3.3 w/ manual patch
Comment 6 Kai Uwe Broulik 2025-03-29 08:36:20 UTC
App-foo.bar sounds like a GTK action. Maybe it's a difference between GTK notifications, portal or whatever.
Comment 7 Naxdy 2025-03-29 08:47:17 UTC
Telegram is Qt. I also notice the reply action is missing from Nate's screenshot, which is weird
Comment 8 Ilya Bizyaev 2025-03-29 15:58:33 UTC
Probably has to do with which Telegram versions you have installed, and where from
Comment 9 Nate Graham 2025-03-29 16:07:19 UTC
Yeah I've got 5.13 from Flatpak.
Comment 10 Kai Uwe Broulik 2025-04-14 08:53:25 UTC
Git commit c8c4440522a264a02b831df4c14b5a2350e0d71b by Kai Uwe Broulik.
Committed on 14/04/2025 at 08:24.
Pushed by broulik into branch 'master'.

Notifications: Ignore default action label for non-KDE apps

Most apps don't seem to expect the default action be visible to the user
even though the spec says not to make any assumptions.

For KDE apps we can assume a user of KNotification (which uses the same
action API as the user-facing butons) does something sensible.

M  +7    -1    libnotificationmanager/notification.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/c8c4440522a264a02b831df4c14b5a2350e0d71b
Comment 11 Ilya Fedin 2025-08-15 10:24:25 UTC
FWIW, this is in fact a bug in xdg-desktop-portal-kde which was stemming from KNotification API limitness: https://invent.kde.org/frameworks/knotifications/-/issues/2

It seems KNotification API was fixed in 2023 but xdg-desktop-portal-kde wasn't and now plasma-workspace has a workaround that also affects other apps.