Notifications: Ignore default action label for non-KDE apps

Most apps don't seem to expect the default action be visible to the user
even though the spec says not to make any assumptions.

For KDE apps we can assume a user of KNotification (which uses the same
action API as the user-facing butons) does something sensible.

BUG: 502149